Uploud The Files

--- a/MVC-Project/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MVC-Project/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -286,10 +286,27 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a href="../generate/theme.html" class="nav-link">
-                                <i class="nav-icon bi bi-palette"></i>
-                                <p>Theme Generate</p>
+                            <a href="#" class="nav-link">
+                                <i class="nav-icon bi bi-speedometer"></i>
+                                <p>
+                                    Products
+                                    <i class="nav-arrow bi bi-chevron-right"></i>
+                                </p>
                             </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a href="/admin/products" class="nav-link">
+                                        <i class="nav-icon bi bi-circle"></i>
+                                        <p>Index</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/admin/products/create" class="nav-link">
+                                        <i class="nav-icon bi bi-circle"></i>
+                                        <p>Create Product</p>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         
                     </ul>
