--- a/MVC-Project/Areas/Admin/Views/Products/Index.cshtml
+++ b/MVC-Project/Areas/Admin/Views/Products/Index.cshtml
@@ -1,26 +1,6 @@
-﻿<div class="card-body table-responsive p-0">
-    <table class="table table-hover text-nowrap">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Category</th>
-            </tr>
-
-        </thead>
-
-        <tbody>
-            @foreach (var item in ViewBag.Categories)
-            {
-                <tr>
-                    <td>@item.Id</td>
-                    <td>@item.Name</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-    <a class="btn btn-outline-primary mt-3" href="/admin/categories/add">Add New Category</a>
-</div>
-<div class="card-body table-responsive p-0 mt-5">
+﻿@using MVC_Project.Models
+@model List<Product>
+<div class="card-body table-responsive p-0">
     <table class="table table-hover text-nowrap">
         <thead>
             <tr>
@@ -31,12 +11,13 @@
                 <th>Quantity</th>
                 <th>Image</th>
                 <th>Category</th>
+                <th>Action</th>
             </tr>
 
         </thead>
 
         <tbody>
-            @foreach (var item in ViewBag.Products)
+            @foreach (var item in Model)
             {
                 <tr>
                     <td>@item.Id</td>
@@ -47,6 +28,11 @@
                     <td><img src="~/imges/@item.Image" alt="This Is Image" width="50px" /></td>
                     <td>
                         @item.Category.Name
+                    </td>
+                    <td>
+                        <a href="" class="btn btn-outline-info">Details</a>
+                        <a href="/admin/products/edit/@item.Id" class="btn btn-outline-warning">Edit</a>
+                        <a href="/admin/Products/remove/@item.Id" class="btn btn-outline-danger">Delete</a>
                     </td>
                 </tr>
             }
