--- a/MVC-Project/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MVC-Project/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -429,6 +429,9 @@
         });
     </script>
     <!--end::OverlayScrollbars Configure-->
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
     <!--end::Script-->
 </body>
 <!--end::Body-->
