--- a/MVC-Project/Areas/Admin/Views/Categories/Add.cshtml
+++ b/MVC-Project/Areas/Admin/Views/Categories/Add.cshtml
@@ -2,11 +2,11 @@
 @model Category
 
 
-<form method="Post" action="/admin/categories/store">
+<form method="Post" asp-action="store" asp-controller="categories" asp-area="admin">
     <div class="card-body">
         <div class="form-group">
-            <label for="exampleInputEmail1">Add Category</label>
-            <input type="text" name="Name" class="form-control" value="@Model.Name" id="exampleInputEmail1" placeholder="Enter Category Name">
+            <label asp-for="Name"></label>
+            <input class="form-control" placeholder="Enter Category Name" asp-for="Name">
             <span class="text-danger" asp-validation-for="Name"></span>
         </div>
     </div>
