--- a/MVC-Project/Areas/Admin/Views/Categories/Edit.cshtml
+++ b/MVC-Project/Areas/Admin/Views/Categories/Edit.cshtml
@@ -2,11 +2,12 @@
 @model Category
 
 
-<form method="Post" action="/admin/categories/update/@Model.Id">
+<form method="Post" asp-action="update" asp-controller="categories" asp-area="admin">
     <div class="card-body">
+        <input type="hidden" asp-for="Id"/>
         <div class="form-group">
-            <label for="exampleInputEmail1">Edit Category</label>
-            <input type="text" name="Name" class="form-control" value="@Model.Name" id="exampleInputEmail1" placeholder="Enter Category Name">
+            <label asp-for="Name"></label>
+            <input asp-for="Name" class="form-control" placeholder="Enter Category Name">
             <span class="text-danger" asp-validation-for="Name"></span>
         </div>
     </div>
